SERVER-12562 Prevent user mgmt read commands on secondary